[gd_scene load_steps=10 format=3 uid="uid://cncq85uqx5fqq"]

[ext_resource type="Script" path="res://objs/storage/delivery.gd" id="1_86l20"]
[ext_resource type="Material" uid="uid://cjn7bvekii8q8" path="res://assets/materials/drill.tres" id="1_jqaqg"]
[ext_resource type="AudioStream" uid="uid://c5ypupt5sl0gb" path="res://assets/sounds/trade_made.mp3" id="3_jg23m"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4s8gq"]

[sub_resource type="CylinderMesh" id="CylinderMesh_enqtv"]
bottom_radius = 0.1
height = 0.5

[sub_resource type="TorusMesh" id="TorusMesh_mr80l"]
inner_radius = 0.4
outer_radius = 0.5

[sub_resource type="TorusMesh" id="TorusMesh_n15ma"]
inner_radius = 0.3
outer_radius = 0.4

[sub_resource type="TorusMesh" id="TorusMesh_jfrs1"]
inner_radius = 0.2
outer_radius = 0.3

[sub_resource type="BoxShape3D" id="BoxShape3D_agrt8"]
size = Vector3(1.1, 1, 2)

[node name="delivery" type="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.08078, 0.759414, -4.0616)
script = ExtResource("1_86l20")

[node name="collision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_4s8gq")

[node name="mesh" type="Node3D" parent="."]

[node name="box" type="MeshInstance3D" parent="mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
mesh = SubResource("CylinderMesh_enqtv")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("1_jqaqg")

[node name="rings" type="Node3D" parent="mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.451755, 0)

[node name="ring" type="MeshInstance3D" parent="mesh/rings"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.596198, 0)
mesh = SubResource("TorusMesh_mr80l")
skeleton = NodePath("../../..")
surface_material_override/0 = ExtResource("1_jqaqg")

[node name="ring2" type="MeshInstance3D" parent="mesh/rings"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.794448, 0)
mesh = SubResource("TorusMesh_n15ma")
skeleton = NodePath("../../..")
surface_material_override/0 = ExtResource("1_jqaqg")

[node name="ring3" type="MeshInstance3D" parent="mesh/rings"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01336, 0)
mesh = SubResource("TorusMesh_jfrs1")
skeleton = NodePath("../../..")
surface_material_override/0 = ExtResource("1_jqaqg")

[node name="resource_spawn" type="Node3D" parent="mesh"]

[node name="area" type="Area3D" parent="."]

[node name="collision" type="CollisionShape3D" parent="area"]
shape = SubResource("BoxShape3D_agrt8")

[node name="audio_trade_made" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_jg23m")
unit_size = 3.0

[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="area" to="." method="_on_area_body_exited"]
